@@ -4,23 +4,32 @@ import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 import uk.gov.hmcts.ccd.sdk.type.Document;
 import uk.gov.hmcts.sptribs.caseworker.model.Order;
+import uk.gov.hmcts.sptribs.caseworker.util.OrderDocumentListUtil;
 import uk.gov.hmcts.sptribs.ciccase.model.CaseData;
 import uk.gov.hmcts.sptribs.ciccase.model.CicCase;
 import uk.gov.hmcts.sptribs.ciccase.model.ContactPreferenceType;
 import uk.gov.hmcts.sptribs.ciccase.model.NotificationResponse;
+import uk.gov.hmcts.sptribs.document.DocumentUtil;
+import uk.gov.hmcts.sptribs.document.model.CaseworkerCICDocument;
 import uk.gov.hmcts.sptribs.notification.NotificationHelper;
 import uk.gov.hmcts.sptribs.notification.NotificationServiceCIC;
 import uk.gov.hmcts.sptribs.notification.PartiesNotification;
 import uk.gov.hmcts.sptribs.notification.TemplateName;
 import uk.gov.hmcts.sptribs.notification.model.NotificationRequest;
 
+import java.util.ArrayList;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
+import static uk.gov.hmcts.sptribs.common.CommonConstants.DASHBOARD_KEY;
 import static uk.gov.hmcts.sptribs.common.CommonConstants.TRIBUNAL_ORDER;
+import static uk.gov.hmcts.sptribs.notification.TemplateName.NEW_ORDER_ISSUED_EMAIL;
+import static uk.gov.hmcts.sptribs.notification.TemplateName.NEW_ORDER_ISSUED_EMAIL_NEW_CD;
 
 @Component
 @Slf4j
@@ -29,6 +38,12 @@ public class NewOrderIssuedNotification implements PartiesNotification {
     private final NotificationServiceCIC notificationService;
 
     private final NotificationHelper notificationHelper;
+
+    @Value("${sptribs-frontend.dashboard-url}")
+    private String citizenDashboardUrl;
+
+    @Value("${feature.citizen-dashboard.enabled}")
+    private boolean citizenDashboardEnabled;
 
     @Autowired
     public NewOrderIssuedNotification(NotificationServiceCIC notificationService, NotificationHelper notificationHelper) {
@@ -43,9 +58,9 @@ public class NewOrderIssuedNotification implements PartiesNotification {
 
         final NotificationResponse notificationResponse;
         if (cicCase.getContactPreferenceType() == ContactPreferenceType.EMAIL) {
-            final Map<String, String> uploadedDocuments = getUploadedDocumentIds(caseData);
+            addDashboardLink(templateVars);
             notificationResponse = sendEmailNotificationWithAttachment(cicCase.getEmail(),
-                uploadedDocuments, templateVars, caseNumber);
+                caseData, templateVars, getTemplateName(), caseNumber);
         } else {
             notificationHelper.addAddressTemplateVars(cicCase.getAddress(), templateVars);
             notificationResponse = sendLetterNotification(templateVars, caseNumber);
@@ -60,9 +75,9 @@ public class NewOrderIssuedNotification implements PartiesNotification {
 
         final NotificationResponse notificationResponse;
         if (cicCase.getRepresentativeContactDetailsPreference() == ContactPreferenceType.EMAIL) {
-            final Map<String, String> uploadedDocuments = getUploadedDocumentIds(caseData);
+            addDashboardLink(templateVars);
             notificationResponse = sendEmailNotificationWithAttachment(cicCase.getRepresentativeEmailAddress(),
-                uploadedDocuments, templateVars, caseNumber);
+                caseData, templateVars, getTemplateName(), caseNumber);
         } else {
             notificationHelper.addAddressTemplateVars(cicCase.getRepresentativeAddress(), templateVars);
             notificationResponse = sendLetterNotification(templateVars, caseNumber);
@@ -76,9 +91,8 @@ public class NewOrderIssuedNotification implements PartiesNotification {
         final CicCase cicCase = caseData.getCicCase();
 
         final Map<String, Object> respondentTemplateVars = notificationHelper.getRespondentCommonVars(caseNumber, caseData);
-        final Map<String, String> uploadedDocuments = getUploadedDocumentIds(caseData);
         final NotificationResponse notificationResponse = sendEmailNotificationWithAttachment(cicCase.getRespondentEmail(),
-            uploadedDocuments, respondentTemplateVars, caseNumber);
+            caseData, respondentTemplateVars, NEW_ORDER_ISSUED_EMAIL, caseNumber);
         cicCase.setResNotificationResponse(notificationResponse);
     }
 
@@ -89,10 +103,10 @@ public class NewOrderIssuedNotification implements PartiesNotification {
 
         final NotificationResponse notificationResponse;
         if (cicCase.getContactPreferenceType() == ContactPreferenceType.EMAIL) {
-            final Map<String, String> uploadedDocuments = getUploadedDocumentIds(caseData);
+            addDashboardLink(templateVars);
 
             notificationResponse = sendEmailNotificationWithAttachment(cicCase.getApplicantEmailAddress(),
-                uploadedDocuments, templateVars, caseNumber);
+                caseData, templateVars, getTemplateName(), caseNumber);
         } else {
             notificationHelper.addAddressTemplateVars(cicCase.getAddress(), templateVars);
             notificationResponse = sendLetterNotification(templateVars, caseNumber);
@@ -102,16 +116,17 @@ public class NewOrderIssuedNotification implements PartiesNotification {
     }
 
     private NotificationResponse sendEmailNotificationWithAttachment(final String destinationAddress,
-                                                                     Map<String, String> uploadedDocuments,
+                                                                     CaseData caseData,
                                                                      final Map<String, Object> templateVars,
+                                                                     TemplateName templateName,
                                                                      String caseReferenceNumber) {
         final NotificationRequest emailRequest = notificationHelper.buildEmailNotificationRequest(
             destinationAddress,
             true,
-            uploadedDocuments,
+            getUploadedDocumentIds(caseData),
             templateVars,
-            TemplateName.NEW_ORDER_ISSUED_EMAIL);
-        return notificationService.sendEmail(emailRequest, caseReferenceNumber);
+            templateName);
+        return notificationService.sendEmail(emailRequest, getOrder(caseData), caseReferenceNumber, null);
     }
 
     private NotificationResponse sendLetterNotification(Map<String, Object> templateVarsLetter, String caseReferenceNumber) {
@@ -136,17 +151,36 @@ public class NewOrderIssuedNotification implements PartiesNotification {
 
     private Document getLastSelectedOrder(CicCase cicCase) {
         if (CollectionUtils.isNotEmpty(cicCase.getOrderList())) {
-            final Order order = cicCase.getOrderList().get(0).getValue();
+            final Order order = cicCase.getOrderList().getFirst().getValue();
 
             if (order.getDraftOrder() != null) {
                 return order.getDraftOrder().getTemplateGeneratedDocument();
             } else if (order.getUploadedFile() != null
                 && CollectionUtils.isNotEmpty(order.getUploadedFile())) {
-                return order.getUploadedFile().get(0).getValue().getDocumentLink();
+                return order.getUploadedFile().getFirst().getValue().getDocumentLink();
             }
         }
 
         return null;
     }
 
+    private List<CaseworkerCICDocument> getOrder(CaseData caseData) {
+        List<CaseworkerCICDocument> orderDocuments = OrderDocumentListUtil.getOrderDocuments(caseData.getCicCase());
+        Document lastOrderDocument = getLastSelectedOrder(caseData.getCicCase());
+        if (lastOrderDocument == null) {
+            return new ArrayList<>();
+        }
+        String lastOrderUUID = DocumentUtil.getUuid(lastOrderDocument);
+        return orderDocuments.stream().filter(doc -> doc.getDocumentLink().getBinaryUrl().contains(lastOrderUUID)).toList();
+    }
+
+    private TemplateName getTemplateName() {
+        return citizenDashboardEnabled ? NEW_ORDER_ISSUED_EMAIL_NEW_CD : NEW_ORDER_ISSUED_EMAIL;
+    }
+
+    private void addDashboardLink(Map<String, Object> templateVars) {
+        if (citizenDashboardEnabled) {
+            templateVars.put(DASHBOARD_KEY, citizenDashboardUrl);
+        }
+    }
 }
